--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "discord.js": "^14.12.1",
     "dotenv": "^16.3.1",
     "mongodb": "^5.8.1",
-    "mongoose": "^7.4.5"
+    "mongoose": "^7.4.5",
+    "random-words": "^2.0.0"
   }
 }
